--- a/src/app/components/timesheet/timesheet.html
+++ b/src/app/components/timesheet/timesheet.html
@@ -3,20 +3,50 @@
     @if (department) {
     <h2>{{ department.name }}</h2>
 
-	<mat-card>
-		<mat-form-field>
-			<input matInput [formControl]="employeeNameFC" placeholder="Employee Name" type="text">
-			@if (employeeNameFC.hasError('duplicate')) {
-				<mat-error>Duplicate Name</mat-error>
-			}
-		</mat-form-field>
+    <mat-card>
+      <mat-form-field>
+        <input matInput [formControl]="employeeNameFC" placeholder="Employee Name" type="text" />
+        @if (employeeNameFC.hasError('duplicate')) {
+        <mat-error>Duplicate Name</mat-error>
+        }
+      </mat-form-field>
 
-		<button mat-mini-fab color="primary" (click)="addEmployee()" [disabled]="employeeNameFC.invalid">
-			<mat-icon>add</mat-icon>
-		</button>
+      <button
+        mat-mini-fab
+        color="primary"
+        (click)="addEmployee()"
+        [disabled]="employeeNameFC.invalid"
+      >
+        <mat-icon>add</mat-icon>
+      </button>
+    </mat-card>
 
-		<div>{{ employees | json }}</div>
-	</mat-card>
+    <mat-card class="hours">
+      <table>
+        <thead>
+          <th>Name</th>
+          @for (day of weekdays; track $index) {
+          <th>{{ day }}</th>
+          }
+          <th>Total Hours</th>
+          <th></th>
+        </thead>
+
+        <tbody>
+          @for (employee of employees; track $index) {
+          <tr>
+            <td>{{ employee.name }}</td>
+            @for (day of weekdays; track $index) {
+            <td>
+              <input type="number" [id]="day" [(ngModel)]="employee[day]" class="hours-input" />
+            </td>
+            }
+            <td class="total-cell">{{ getTotalHours(employee) }}</td>
+          </tr>
+          }
+        </tbody>
+      </table>
+    </mat-card>
     }
   </div>
 </div>
