--- a/src/app/components/timesheet/timesheet.html
+++ b/src/app/components/timesheet/timesheet.html
@@ -38,7 +38,7 @@
             <td>{{ employee.name }}</td>
             @for (day of weekdays; track $index) {
             <td>
-              <input type="number" [id]="day" [(ngModel)]="employee[day]" class="hours-input" />
+              <input type="number" [id]="day" [(ngModel)]="employee[day.toLowerCase()]" class="hours-input" />
             </td>
             }
             <td class="total-cell">{{ getTotalHours(employee) }}</td>
