--- a/src/app/components/timesheet/timesheet.scss
+++ b/src/app/components/timesheet/timesheet.scss
@@ -1,29 +1,42 @@
+$add: rgb(23, 224, 127);
+
 h2 {
-    text-align: center;
+  text-align: center;
 }
 
 .cards {
-    margin: auto;
+  margin: auto;
 }
 
-mat-form-field {
-    width: calc(100% - 40px);
+.employee-input {
+  display: flex;
+  align-items: center;
+
+  mat-form-field {
+    flex: 1;
+  }
+
+  button {
+	margin: 10px;
+	background-color: $add;
+	color: black;
+  }
 }
 
 .hours {
-    min-height: 200px;
-    margin-top: 30px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+  min-height: 200px;
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .hours-input {
-    max-width: 75px;
-    margin-left: 15px;
-    text-align: center;
+  max-width: 75px;
+  margin-left: 15px;
+  text-align: center;
 }
 
 .total-cell {
-    text-align: center;
+  text-align: center;
 }
