--- a/src/app/components/timesheet/timesheet.html
+++ b/src/app/components/timesheet/timesheet.html
@@ -5,19 +5,16 @@
 
     <mat-card>
       <div class="employee-input">
-        <mat-form-field>
-          <input matInput [formControl]="employeeNameFC" placeholder="Employee Name" type="text" />
+        <mat-form-field appearance="outline">
+          <mat-label>Employee Name</mat-label>
+          <input matInput [formControl]="employeeNameFC" type="text" />
 
           @if (employeeNameFC.hasError('duplicate')) {
           <mat-error>Duplicate Name</mat-error>
           }
         </mat-form-field>
 
-        <button
-          mat-mini-fab
-          (click)="addEmployee()"
-          [disabled]="employeeNameFC.invalid"
-        >
+        <button mat-mini-fab (click)="addEmployee()" [disabled]="employeeNameFC.invalid">
           <mat-icon>add</mat-icon>
         </button>
       </div>
@@ -49,6 +46,12 @@
             </td>
             }
             <td class="total-cell">{{ getTotalHours(employee) }}</td>
+
+            <td>
+              <button mat-icon-button (click)="deleteEmployee($index)">
+                <mat-icon>delete</mat-icon>
+              </button>
+            </td>
           </tr>
           }
         </tbody>
