fixed some styling on the header navbar

--- a/src/app/components/top-navbar/top-navbar.html
+++ b/src/app/components/top-navbar/top-navbar.html
@@ -3,5 +3,5 @@
         <mat-icon>home</mat-icon>
     </button>
 
-    <div routerLink="./analytics">Analytics</div>
+    <span routerLink="./analytics">Analytics</span>
 </mat-toolbar>
