--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,4 @@
-<div style="height: 100%;">
+<div class="app-container">
     <app-top-navbar></app-top-navbar>
-	<router-outlet style="height: 100%;"></router-outlet>
+	<router-outlet></router-outlet>
 </div>
