--- a/src/app/components/top-navbar/top-navbar.scss
+++ b/src/app/components/top-navbar/top-navbar.scss
@@ -1,17 +1,19 @@
+mat-toolbar {
+	display: flex;
+	gap: 5px;
+}
+
 .material-icons {
     font-size: 35px;
 }
 
+button {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
 mat-icon {
-    width: 35px;
-    height: 35px;
-}
-
-.mat-icon-button i, .mat-icon-button .mat-icon {
-    line-height: 35px;
-}
-
-div {
-    margin-left: 10px;
-    cursor: pointer;
+	min-height: fit-content;
+	min-width: fit-content;
 }
