completed unit #9 and also made the router-outlet display more dynamically on the page

--- a/src/app/components/top-navbar/top-navbar.html
+++ b/src/app/components/top-navbar/top-navbar.html
@@ -3,5 +3,5 @@
         <mat-icon>home</mat-icon>
     </button>
 
-    <span routerLink="./analytics">Analytics</span>
+    <span class="link-text" routerLink="./analytics">Analytics</span>
 </mat-toolbar>
