--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,6 @@
 <div class="app-container">
-    <app-top-navbar></app-top-navbar>
-	<router-outlet></router-outlet>
+  <app-top-navbar></app-top-navbar>
+  <div class="route-container">
+    <router-outlet></router-outlet>
+  </div>
 </div>
