--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,7 +1,9 @@
 .app-container {
 	height: 100%;
+	display: flex;
+	flex-direction: column;
 }
 
-router-outlet {
+.route-container {
 	height: 100%;
 }
