--- a/src/app/components/analytics-table/analytics-table.html
+++ b/src/app/components/analytics-table/analytics-table.html
@@ -1,1 +1,27 @@
-<p>analytics-table works!</p>
+<div>
+  <table>
+    <thead>
+      <th>Name</th>
+      @for (weekday of weekdays; track $index) {
+      <th>{{ weekday }}</th>
+      }
+      <th>Total Hours</th>
+      <th>Pay Rate</th>
+      <th>Total Pay</th>
+    </thead>
+
+    <tbody>
+      @for (employee of departmentEmployees; track $index) {
+      <tr>
+        <td>{{ employee.name }}</td>
+        @for (weekday of weekdays; track $index){
+        <td>{{ employee[weekday] }}</td>
+        }
+        <td class="total-cell">{{ getTotalHours(employee) }}</td>
+        <td>{{ employee.payRate | currency: 'USD'}}/hr</td>
+        <td>{{ employee.payRate * getTotalHours(employee) | currency: 'USD' }}</td>
+      </tr>
+      }
+    </tbody>
+  </table>
+</div>
