--- a/src/app/components/departments/departments.html
+++ b/src/app/components/departments/departments.html
@@ -1,11 +1,11 @@
 <div class="main-container">
   <mat-card>
     <mat-list>
-      @for (department of departments; track $index) {
+      @if (departments$ | async; as departments) { @for (department of departments; track $index) {
       <mat-list-item (click)="goToDepartment(department.id)">
         {{ department.name }}
       </mat-list-item>
-      }
+      } }
     </mat-list>
   </mat-card>
 </div>
